@@ -1,3 +1,8 @@
+Thu Jun  4 10:14:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Select_Reactor_T.cpp:
+          Only call the notify_handler_ when we have a valid pointer
+
 Thu Jun  4 09:42:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * contrib/FaCE/CE_ARGV.h:
